widescreen whitespace bug

--- a/styles.css
+++ b/styles.css
@@ -109,10 +109,10 @@ aside {
 .parallax::after {
   content: " ";
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  top: -20px;
+  right: -20px;
+  bottom: -20px;
+  left: -20px;
   transform: translateZ(-1px) scale(1.5);
   background-size: cover;
   z-index: -1;
